# build-vault-embeddings-demo

./: .env.example  .gitignore  README.md  build_vault_demo.ipynb  env.example  pipeline_config.json  pipeline_demo_local.ipynb  pipeline_demo_local2.ipynb  pyproject.toml  youtube_embeddings_chromadb.ipynb  youtube_graphqa_neo4j.ipynb
archive/: debug_insights.py  demo_config.py  demo_pipeline.py  pipeline_demo.ipynb  pipeline_demo.py  segment_processing_fix.py
pipeline/: audio_downloader.py  episode_summary_generator.py  insight_extractor.py  link_enricher.py  link_extractor.py  product_extractor.py  segment_processor.py  transcription_service.py
shared/: config.py  supabase_client.py
